--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.shadowhunt.maven.plugins</groupId>
 	<artifactId>package-info-maven-plugin</artifactId>
-	<version>1.4.0-SNAPSHOT</version>
+	<version>1.4.0</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>Maven package-info.java Plugin</name>
@@ -33,7 +33,8 @@
 		<connection>scm:git:ssh://gitolite@git.shadowhunt.de/package-info-maven-plugin.git</connection>
 		<developerConnection>scm:git:ssh://gitolite@git.shadowhunt.de/package-info-maven-plugin.git</developerConnection>
 		<url>https://git.shadowhunt.de/maven-plugins.git</url>
-	</scm>
+	  <tag>v1.4.0</tag>
+  </scm>
 	<!-- }}}1 -->
 
 	<!-- repository config {{{1 -->
