--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.shadowhunt.maven.plugins</groupId>
 	<artifactId>package-info-maven-plugin</artifactId>
-	<version>1.4.1</version>
+	<version>1.4.2-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>Maven package-info.java Plugin</name>
@@ -30,7 +30,7 @@
 
 	<!-- scm config {{{1 -->
 	<scm>
-		<tag>v1.4.1</tag>
+		<tag>HEAD</tag>
 		<connection>scm:git:ssh://gitolite@git.shadowhunt.de/package-info-maven-plugin.git</connection>
 		<developerConnection>scm:git:ssh://gitolite@git.shadowhunt.de/package-info-maven-plugin.git</developerConnection>
 		<url>https://git.shadowhunt.de/package-info-maven-plugin.git</url>
