--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
 
 		<maven.api.version>3.0</maven.api.version>
 
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+		<sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
+		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+
 		<sonar.switchoffviolations.configFile>${project.basedir}/target/sonar.ignore</sonar.switchoffviolations.configFile>
 	</properties>
 
@@ -150,6 +154,11 @@
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>versions-maven-plugin</artifactId>
 					<version>2.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.6.2.201302030002</version>
 				</plugin>
 			</plugins>
 		</pluginManagement><!-- }}}1 -->
@@ -333,6 +342,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<printSummary>false</printSummary>
+					<argLine>${jacoco.agent.argLine}</argLine>
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -342,6 +352,21 @@
 						<version>2.12</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<configuration>
+					<propertyName>jacoco.agent.argLine</propertyName>
+					<destFile>${sonar.jacoco.reportPath}</destFile>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins><!-- }}}1 -->
 	</build>
