new plugin versions and options

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<packaging>maven-plugin</packaging>
 
 	<name>Maven package-info.java Plugin</name>
+	<inceptionYear>2012</inceptionYear>
 
 	<organization>
 		<name>shadowhunt</name>
@@ -24,12 +25,12 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<maven.api.version>3.0</maven.api.version>
-
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 
-		<sonar.switchoffviolations.configFile>${project.basedir}/target/sonar.ignore</sonar.switchoffviolations.configFile>
+		<sonar.ignorecoverage.configFile>${project.basedir}/target/coverage.ignore</sonar.ignorecoverage.configFile>
+		<sonar.ignoreviolations.configFile>${project.basedir}/target/violations.ignore</sonar.ignoreviolations.configFile>
 	</properties>
 
 	<!-- scm config {{{1 -->
@@ -68,7 +69,7 @@
 				<plugin>
 					<groupId>de.shadowhunt.maven.plugins</groupId>
 					<artifactId>sonarignore-maven-plugin</artifactId>
-					<version>3.2.0</version>
+					<version>3.3.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -158,7 +159,7 @@
 				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.6.2.201302030002</version>
+					<version>0.6.3.201306030806</version>
 				</plugin>
 			</plugins>
 		</pluginManagement><!-- }}}1 -->
@@ -186,13 +187,19 @@
 				<groupId>de.shadowhunt.maven.plugins</groupId>
 				<artifactId>sonarignore-maven-plugin</artifactId>
 				<configuration>
-					<ignoreAnnotations />
-					<forceCheckAnnotations />
-
-					<ignoreEquals>true</ignoreEquals>
-					<ignoreGetterAndSetter>true</ignoreGetterAndSetter>
-					<ignoreHashcode>true</ignoreHashcode>
-					<ignoreToString>true</ignoreToString>
+					<globalSettings>
+						<ignoreEquals>true</ignoreEquals>
+						<ignoreGeneratedClasses>true</ignoreGeneratedClasses>
+						<ignoreGettersAndSetters>true</ignoreGettersAndSetters>
+						<ignoreHashcode>true</ignoreHashcode>
+						<ignoreToString>true</ignoreToString>
+					</globalSettings>
+					<coverageSettings>
+						<output>${sonar.ignorecoverage.configFile}</output>
+					</coverageSettings>
+					<violationSettings>
+						<output>${sonar.ignoreviolations.configFile}</output>
+					</violationSettings>
 				</configuration>
 				<executions>
 					<execution>
@@ -299,6 +306,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-plugin-plugin</artifactId>
 				<configuration>
+					<helpPackageName>de.shadowhunt.maven.plugins.packageinfo</helpPackageName>
 					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
 				</configuration>
 				<executions>
