--- a/pom.xml
+++ b/pom.xml
@@ -89,11 +89,6 @@
 			<plugins>
 				<plugin>
 					<groupId>de.shadowhunt.maven.plugins</groupId>
-					<artifactId>package-info-maven-plugin</artifactId>
-					<version>1.4.1</version>
-				</plugin>
-				<plugin>
-					<groupId>de.shadowhunt.maven.plugins</groupId>
 					<artifactId>sonarignore-maven-plugin</artifactId>
 					<version>3.4.2</version>
 				</plugin>
@@ -206,24 +201,6 @@
 		</pluginManagement><!-- }}}1 -->
 		<plugins><!-- {{{1 -->
 			<!-- keep list ordered by groupId and artifactId -->
-			<plugin>
-				<groupId>de.shadowhunt.maven.plugins</groupId>
-				<artifactId>package-info-maven-plugin</artifactId>
-				<configuration>
-					<annotationLines>
-						<annotationLine>@javax.annotation.CheckReturnValue(when = javax.annotation.meta.When.NEVER)</annotationLine>
-						<annotationLine>@javax.annotation.ParametersAreNonnullByDefault</annotationLine>
-					</annotationLines>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>package-info</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<groupId>de.shadowhunt.maven.plugins</groupId>
 				<artifactId>sonarignore-maven-plugin</artifactId>
@@ -512,13 +489,18 @@
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>annotations</artifactId>
-			<version>2.0.1</version>
+			<version>2.0.2</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>de.shadowhunt</groupId>
+			<artifactId>annotations</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
