--- a/pom.xml
+++ b/pom.xml
@@ -18,18 +18,18 @@
 		<url>http://www.shadowhunt.de</url>
 	</organization>
 
-	<!--licenses>
+	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
 			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
 			<distribution>repo</distribution>
 		</license>
-	</licenses-->
+	</licenses>
 
 	<developers>
 		<developer>
 			<id>thrawn</id>
-			<name>Thrawn</name>
+			<name>Alexander Dreweke</name>
 			<email>thrawn@shadowhunt.de</email>
 			<timezone>Europe/Berlin</timezone>
 		</developer>
@@ -39,9 +39,9 @@
 	<!-- environment information {{{1 -->
 	<scm>
 		<tag>HEAD</tag>
-		<connection>scm:git:ssh://gitolite@git.shadowhunt.de/package-info-maven-plugin.git</connection>
-		<developerConnection>scm:git:ssh://gitolite@git.shadowhunt.de/package-info-maven-plugin.git</developerConnection>
-		<url>https://git.shadowhunt.de/package-info-maven-plugin.git</url>
+		<connection>scm:git:https://scm.shadowhunt.de/package-info-maven-plugin</connection>
+		<developerConnection>scm:git:https://scm.shadowhunt.de/package-info-maven-plugin</developerConnection>
+		<url>https://scm.shadowhunt.de/package-info</url>
 	</scm>
 
 	<prerequisites>
@@ -52,22 +52,21 @@
 		<repository>
 			<id>shadowhunt</id>
 			<name>Shadowhunt Local Repository</name>
-			<url>http://maven.shadowhunt.de/local-release</url>
+			<url>https://maven.shadowhunt.de/local-release</url>
 		</repository>
 		<snapshotRepository>
 			<id>shadowhunt</id>
 			<name>Shadowhunt Local Snapshot Repository</name>
-			<url>http://maven.shadowhunt.de/local-snapshot</url>
+			<url>https://maven.shadowhunt.de/local-snapshot</url>
 		</snapshotRepository>
 		<site>
-			<id>www.shadowhunt.de</id>
-			<url>TODO</url>
+			<id>shadowhunt.site</id>
+			<url>scp://dev.shadowhunt.de/sites/package-info</url>
 		</site>
 	</distributionManagement>
 	<!-- }}}1 -->
 
 	<properties>
-		<eclipse.config>http://dev.shadowhunt.de/ide/eclipse</eclipse.config>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -88,9 +87,9 @@
 			<!-- keep list ordered by groupId and artifactId -->
 			<plugins>
 				<plugin>
-					<groupId>de.shadowhunt.maven.plugins</groupId>
-					<artifactId>sonarignore-maven-plugin</artifactId>
-					<version>3.4.2</version>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>2.4</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -110,12 +109,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
-					<version>2.7</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-eclipse-plugin</artifactId>
-					<version>2.9</version>
+					<version>2.8.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -135,7 +129,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-install-plugin</artifactId>
-					<version>2.4</version>
+					<version>2.5.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -155,7 +149,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
-					<version>2.4.1</version>
+					<version>2.4.2</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -181,6 +175,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.16</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>buildnumber-maven-plugin</artifactId>
+					<version>1.2</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -255,36 +254,9 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<configuration>
-					<projectNameTemplate>[groupId].[artifactId]</projectNameTemplate>
-					<classpathContainers>
-						<!-- enforce default eclipse JRE -->
-						<classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>
-					</classpathContainers>
-					<downloadSources>true</downloadSources>
-					<downloadJavadocs>false</downloadJavadocs>
-					<additionalConfig>
-						<file>
-							<name>.settings/org.eclipse.jdt.core.prefs</name>
-							<url>${eclipse.config}/org.eclipse.jdt.core.prefs</url>
-						</file>
-						<file>
-							<name>.settings/org.eclipse.jdt.ui.prefs</name>
-							<url>${eclipse.config}/org.eclipse.jdt.ui.prefs</url>
-						</file>
-						<file>
-							<name>.settings/org.eclipse.wst.validation.prefs</name>
-							<url>${eclipse.config}/org.eclipse.wst.validation.prefs</url>
-						</file>
-					</additionalConfig>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-gpg-plugin</artifactId>
 				<configuration>
-					<keyname>77103E0B</keyname><!-- shadowhund package -->
+					<keyname>77103E0B</keyname><!-- shadowhunt package -->
 				</configuration>
 				<executions>
 					<execution>
@@ -325,17 +297,16 @@
 				<configuration>
 					<archive>
 						<index>true</index>
+						<manifest>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+						</manifest>
+						<manifestEntries>
+							<Implementation-Build>${buildNumber}</Implementation-Build>
+							<Sealed>true</Sealed>
+						</manifestEntries>
 					</archive>
 					<skipIfEmpty>true</skipIfEmpty>
 				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -384,6 +355,17 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.wagon</groupId>
+						<artifactId>wagon-ssh</artifactId>
+						<version>2.5</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 				<executions>
 					<execution>
@@ -403,7 +385,19 @@
 					<argLine>${jacoco.agent.argLineUT}</argLine>
 				</configuration>
 			</plugin>
-			<!--plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>buildnumber-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>create</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>license-maven-plugin</artifactId>
 				<configuration>
@@ -422,7 +416,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin-->
+			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -453,7 +447,6 @@
 			</plugin>
 		</plugins><!-- }}}1 -->
 	</build>
-
 	<reporting>
 		<plugins><!-- {{{1 -->
 			<plugin>
