switch license for first offical release

--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 
 	<licenses>
 		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<name>The GNU Lesser General Public License, Version 3.0</name>
+			<url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
@@ -412,7 +412,7 @@
 						</goals>
 						<configuration>
 							<addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
-							<licenseName>apache_v2</licenseName>
+							<licenseName>gpl_v3</licenseName>
 						</configuration>
 					</execution>
 				</executions>
