fix typo in description

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<!-- project information {{{1 -->
 	<name>Maven package-info.java Plugin</name>
-	<description>Autogenerates package-info.java files with arbitratry headers</description>
+	<description>Autogenerates package-info.java files with arbitrary headers</description>
 	<url>http://dev.shadowhunt.de/package-info-maven-plugin</url>
 	<inceptionYear>2012</inceptionYear>
 
