useAgent where possible

--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,7 @@
 				<artifactId>maven-gpg-plugin</artifactId>
 				<configuration>
 					<keyname>77103E0B</keyname><!-- shadowhunt package -->
+					<useAgent>true</useAgent>
 				</configuration>
 				<executions>
 					<execution>
