--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.shadowhunt.maven.plugins</groupId>
 	<artifactId>package-info-maven-plugin</artifactId>
-	<version>1.4.2-SNAPSHOT</version>
+	<version>1.4.2</version>
 	<packaging>maven-plugin</packaging>
 
 	<!-- project information {{{1 -->
