--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 
 	<licenses>
 		<license>
-			<name>The GNU Lesser General Public License, Version 3.0</name>
-			<url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
+			<name>The GNU General Public License, Version 3.0</name>
+			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
