output missing dependencies as XML

--- a/pom.xml
+++ b/pom.xml
@@ -277,6 +277,7 @@
                         </goals>
                         <configuration>
                             <failOnWarning>true</failOnWarning>
+                            <outputXML>true</outputXML>
                         </configuration>
                     </execution>
                 </executions>
