--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>de.shadowhunt.maven.plugins</groupId>
     <artifactId>package-info-maven-plugin</artifactId>
-    <version>1.4.4-SNAPSHOT</version>
+    <version>1.4.4</version>
     <packaging>maven-plugin</packaging>
 
     <!-- project information {{{1 -->
