--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,30 @@
     along with Maven package-info.java Plugin.  If not, see <http://www.gnu.org/licenses/>.
 
 -->
+<!--
+
+    This file is part of Maven package-info.java Plugin.
+
+    Maven package-info.java Plugin is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    Maven package-info.java Plugin is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with Maven package-info.java Plugin.  If not, see <http://www.gnu.org/licenses />.
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.shadowhunt.maven.plugins</groupId>
     <artifactId>package-info-maven-plugin</artifactId>
-    <version>1.4.5-SNAPSHOT</version>
+    <version>1.4.5</version>
     <packaging>maven-plugin</packaging>
 
     <!-- project information {{{1 -->
@@ -62,7 +80,7 @@
     <scm>
         <connection>scm:git:https://scm.shadowhunt.de/package-info-maven-plugin.git</connection>
         <developerConnection>scm:git:https://scm.shadowhunt.de/package-info-maven-plugin.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v1.4.5</tag>
         <url>https://github.com/thrawn-sh/package-info</url>
     </scm>
 
