--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with Maven package-info.java Plugin.  If not, see <http://www.gnu.org/licenses/>.
+    along with Maven package-info.java Plugin.  If not, see <http://www.gnu.org/licenses />.
 
 -->
 <!--
@@ -40,7 +40,7 @@
 
     <groupId>de.shadowhunt.maven.plugins</groupId>
     <artifactId>package-info-maven-plugin</artifactId>
-    <version>1.4.5</version>
+    <version>1.4.6-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <!-- project information {{{1 -->
@@ -80,7 +80,7 @@
     <scm>
         <connection>scm:git:https://scm.shadowhunt.de/package-info-maven-plugin.git</connection>
         <developerConnection>scm:git:https://scm.shadowhunt.de/package-info-maven-plugin.git</developerConnection>
-        <tag>v1.4.5</tag>
+        <tag>HEAD</tag>
         <url>https://github.com/thrawn-sh/package-info</url>
     </scm>
 
