fix licence headers

--- a/pom.xml
+++ b/pom.xml
@@ -1,38 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    This file is part of Maven package-info.java Plugin.
+    Maven package-info.java Plugin - Autogenerates package-info.java files with arbitrary headers
+    Copyright © 2012 - 2017 shadowhunt (dev@shadowhunt.de)
 
-    Maven package-info.java Plugin is free software: you can redistribute it and/or modify
+    This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    Maven package-info.java Plugin is distributed in the hope that it will be useful,
+    This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with Maven package-info.java Plugin.  If not, see <http://www.gnu.org/licenses />.
-
--->
-<!--
-
-    This file is part of Maven package-info.java Plugin.
-
-    Maven package-info.java Plugin is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-
-    Maven package-info.java Plugin is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with Maven package-info.java Plugin.  If not, see <http://www.gnu.org/licenses />.
+    along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -202,7 +185,7 @@
                     <header>com/mycila/maven/plugin/license/templates/GPL-3.txt</header>
                     <properties>
                         <owner>${project.organization.name}</owner>
-                        <project.inceptionYear>${build.copyright.year}</project.inceptionYear>
+                        <project.inceptionYear>${project.inceptionYear} - 2017</project.inceptionYear>
                         <email>dev@shadowhunt.de</email>
                     </properties>
                 </configuration>
