--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <groupId>de.shadowhunt.maven.plugins</groupId>
     <artifactId>package-info-maven-plugin</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>maven-plugin</packaging>
 
     <!-- project information {{{1 -->
@@ -63,7 +63,7 @@
     <scm>
         <connection>scm:git:https://scm.shadowhunt.de/package-info-maven-plugin.git</connection>
         <developerConnection>scm:git:https://scm.shadowhunt.de/package-info-maven-plugin.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v2.0.0</tag>
         <url>https://github.com/thrawn-sh/package-info</url>
     </scm>
 
