--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <!--
 
     Maven package-info.java Plugin - Autogenerates package-info.java files with arbitrary headers
-    Copyright © ${project.inceptionYear} shadowhunt (dev@shadowhunt.de)
+    Copyright © 2012-2018 shadowhunt (dev@shadowhunt.de)
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -107,6 +107,11 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
         </dependency>
         <dependency>
             <groupId>de.shadowhunt</groupId>
