--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
-            <version>${maven.api.version}</version>
+            <version>3.3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
